@@ -13,13 +13,13 @@
 .\" *  along with this program; if not, you can get it from:              *
 .\" *  http://www.gnu.org/copyleft/gpl.html                               *
 .\" ***********************************************************************
-.TH "MIREDO" "8" "$Date: 2004/08/24 14:25:34 $" "miredo" "System Manager's Manual"
+.TH "MIREDO" "8" "$Date: 2004/08/26 09:37:53 $" "miredo" "System Manager's Manual"
 .SH NAME
 miredo \- Teredo IPv6 tunneling for Unix
 .SH SYNOPSIS
 .BR "miredo" " [" "-C" "] [" "-i ifname" "] [" "-p relay_port" "] ["
 .BR "-P prefix" "] [" "-t rootdir" "] [" "-u user" "] [" "-s server_ip" "]"
-.RB "[" "server1" " [" "server2" "] ...]"
+.RB "[" "server name" "]"
 
 .SH DESCRIPTON
 .B Miredo
@@ -109,10 +109,10 @@ Display program version and license and exit.
 Print program configuration at startup.
 
 .TP
-.BR "server names"
-Server names should be valid IPv4 host names or addresses. Miredo will
-try to qualify as a Teredo client with the each servers in the list
-until one works. This enable Miredo to serve as a Teredo client.
+.BR "server name"
+Server name should be valid a IPv4 host name or IPv4 address. Miredo
+will try to qualify as a Teredo client with this Teredo server.
+This enable Miredo to serve as a Teredo client.
 .RB "It conflicts with options " "-C" "," "-P" " and " "-s" "."
 
 .\".SH DIAGNOSTICS
@@ -165,7 +165,7 @@ ng_teredo(4), ipv6(7), route(8), ip(8)
 .SH AUTHOR
 Remi Denis-Courmont <rdenis at simphalempin.com>
 
-$Id: miredo.8,v 1.8 2004/08/24 14:25:34 rdenisc Exp $
+$Id: miredo.8,v 1.9 2004/08/26 09:37:53 rdenisc Exp $
 
 http://www.simphalempin.com/dev/miredo/
 
